<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="30dp"
    android:elevation="5dp"
    android:layout_gravity="center"
    android:layout_marginLeft="8dp"
    android:layout_marginTop="5dp"
    android:layout_marginRight="8dp"
    android:layout_marginBottom="5dp"
    card_view:cardCornerRadius="20dp"
    >
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="130dp"
        android:padding="8dp">
        <androidx.cardview.widget.CardView
            android:id="@+id/card_image"
            android:layout_width="80dp"
            android:layout_height="120dp"
            card_view:cardCornerRadius="20dp"

            android:elevation="10dp">

            <ImageView
                android:id="@+id/img_item_photo"
                android:layout_width="80dp"
                android:layout_height="120dp"
                android:layout_marginBottom="4dp"
                android:scaleType="centerCrop"
                tools:src="@tools:sample/avatars" />
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"

            android:layout_marginRight="16dp"
            android:layout_marginBottom="4dp"
            android:layout_toEndOf="@id/card_image"
            android:layout_toRightOf="@id/card_image"
            android:fontFamily="@font/nunito_bold"
            android:textSize="18sp"
            android:textStyle="bold"
            tools:text="@string/manga_title" />

        <TextView
            android:id="@+id/author"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/title"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="16dp"
            android:layout_toEndOf="@id/card_image"
            android:layout_toRightOf="@id/card_image"
            android:ellipsize="end"
            android:fontFamily="@font/nunito_regular"
            android:maxLines="5"
            android:textSize="12sp"
            tools:text="@string/author" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/layout_button"
            android:layout_below="@id/author"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="16dp"
            android:layout_toEndOf="@id/card_image"
            android:layout_toRightOf="@id/card_image"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:paddingRight="5dp"
                android:src="@drawable/star" />

            <TextView
                android:id="@+id/score"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/nunito_regular"
                android:maxLines="5"
                android:textSize="12sp"
                tools:text="@string/score" />

        </LinearLayout>
        <RelativeLayout
            android:id="@+id/layout_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@id/card_image"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/chapter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:fontFamily="@font/nunito_bold"
                tools:text="@string/next_chapter"
                />

            <TextView
                android:id="@+id/views"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scaleType="fitEnd"
                android:textSize="12sp"
                android:fontFamily="@font/nunito_bold"
                android:layout_alignParentRight="true"
                tools:text="@string/views" />


        </RelativeLayout>
    </RelativeLayout>
</androidx.cardview.widget.CardView>