<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="10dp"

    tools:context=".MainActivity">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp"
            >
            <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/about_page"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/profile"
                app:civ_border_color="#FF808080"
                app:civ_border_width="1dp" />
            <LinearLayout
                android:id="@+id/parent_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_gravity="center_vertical"
                android:layout_toRightOf="@id/about_page"
                android:gravity="center_vertical"
                android:orientation="vertical"
                android:paddingLeft="10dp"
                >
                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:fontFamily="@font/nunito_bold"
                    android:text="@string/good_morning"
                    android:textSize="16dp" />
                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/nunito_bold"
                    android:text="@string/name"
                    android:textSize="16dp" />
            </LinearLayout>
            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_gravity="center_vertical"
                android:layout_toRightOf="@id/parent_name"
                android:gravity="center_vertical"
                android:paddingRight="10dp"
                android:scaleType="fitEnd"
                android:src="@drawable/bell" />
        </RelativeLayout>

    <ImageView
        android:layout_width="100dp"
        android:layout_height="25dp"
        android:scaleType="fitXY"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/logo_app" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="10dp">
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/nunito_bold"
            android:text="@string/all_manga"
            android:textSize="16dp" />

    </LinearLayout>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_manga"
        android:layout_marginBottom="10dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:listitem="@layout/item_cardview_manga"
        />

</LinearLayout>